# subway-demo

./: .gitignore  README.md  dependencies.repos  try1
config/: inspection_robot.rviz  nav2_odom_params.yaml
docs/: gazebo_environment_notes.md  odin1_lidar_integration.md  project_memory.md  ros2_gazebo_train_LICENSE  vision_module_notes.md
docs/地铁巡检项目资料/: README.md  下午一点对话整理-地铁巡检学习与分工.txt  比赛方案原文抽取.txt
models/custom_robot/: model.config  model.sdf
models/custom_robot_drive/: model.config  model.sdf
models/gazebo_train/: model.sdf
models/gleis/: model.sdf
scripts/: drive_forward.py  drive_forward.sh  open_custom_robot_drive.sh  open_custom_robot_preview.sh  open_custom_robot_tunnel.sh  open_gazebo_rviz_lidar.sh  open_nav2_demo.sh  open_rviz_robot.sh  open_subway_tunnel.sh  publish_fake_scan.sh  run_vision_demo.sh  run_vision_node.sh  send_nav_goal_forward.sh  stop_robot.sh
src/subway_patrol_description/: CMakeLists.txt  README.md  package.xml
src/subway_patrol_simulation/: CMakeLists.txt  README.md  package.xml
urdf/: custom_robot.urdf  custom_robot_fixed_preview.urdf  custom_robot_gazebo_preview.urdf  custom_robot_preview.urdf  gazebo_train_tf.urdf  inspection_robot_with_lidar.urdf
urdf_v2/: COLCON_IGNORE
vision_demo/: README.md  synthetic_defect_demo.py  vision_node.py
worlds/: custom_robot_drive.world  custom_robot_preview.world  custom_robot_tunnel.world  subway_track_tunnel.world
车urdf(1)/: COLCON_IGNORE
